# bookapp

./: .dockerignore  .env.example  .gitignore  BOOK_DUPLICATE_PROTECTION.md  Dockerfile  GCP_DEPLOY.md  README.md  SETUP.md  app.py  book_import_service.py  cache.pickle  config.py  create_admin.py  csv_cli.py  deploy-gcp-simple.ps1  deploy-gcp.sh  forms.py  genres_and_topics.toml  init_db.py  migrate_add_book_edit_suggestions.py  migrate_add_book_suggestion.py  migrate_add_genres.py  migrate_add_unique_constraint.py  models.py  openlibrary_service.py  print_reviews.py  pyproject.toml  raw_book_list_full(1).csv  raw_book_list_short.csv  render.yaml  requirements.txt  run.py
docs/: BOOK_DUPLICATE_PROTECTION.md  GCP_DEPLOY.md  README_RLS.md  RLS_CHECKLIST.md  RLS_IMPLEMENTATION.md  SETUP.md  SUPABASE_AUTH_INTEGRATION.md  SUPABASE_RLS.md
migrations/: migrate_add_book_edit_suggestions.py  migrate_add_book_suggestion.py  migrate_add_genres.py  migrate_add_rls.py  migrate_add_rls.sql  migrate_add_rls_flask.sql  migrate_add_unique_constraint.py
scripts/: create_admin.py  deploy-gcp.ps1  deploy-gcp.sh  init_db.py  print_reviews.py  run.py
src/bookapp/: __init__.py  app.py  book_import_service.py  config.py  csv_cli.py  forms.py  rls_middleware.py
src/bookapp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/css/: style.css
static/js/: script.js
templates/: base.html  index.html  login.html  register.html
templates/admin/: book_edit_suggestions.html  book_suggestions.html  books.html  classes.html  create_book.html  create_class.html  genres.html  (+7 more)
(+5 files in other folders)
