[project]
name = "bookapp"
version = "0.1.0"
description = "A book tracking application for students"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.1",
    "wtforms>=3.1.1",
    "werkzeug>=3.0.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "email-validator>=2.1.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "ipython>=8.12.3",
    "cyclopts>=2.9.9",
    "attrs>=25.3.0",
    "questionary>=2.1.0",
    "toml>=0.10.2",
]
